dvcp: export OSS-Fuzz artifacts to /workspace/out for Buttercup (<attempt>/out) mapping

--- a/projects/dvcp/Dockerfile
+++ b/projects/dvcp/Dockerfile
@@ -8,3 +8,7 @@ RUN git clone https://github.com/hardik05/Damn_Vulnerable_C_Program.git dvcp
 COPY build.sh /src/build.sh
 RUN chmod +x /src/build.sh
 
+# --- Ensure Buttercup's scheduler sees artifacts in <attempt>/out ---
+# Buttercup will mount the attempt root at /workspace (next step),
+# so mirror OSS-Fuzz /out into /workspace/out.
+RUN mkdir -p /workspace/out && cp -r /out/* /workspace/out/ || true
